tests/error/poly_errors/non_linear1.err
Guppy compilation failed. Error in file $FILE:21

19:    @guppy(module)
20:    def main(q: qubit) -> None:
21:        foo(q)
           ^^^^^^
GuppyTypeError: Cannot instantiate non-linear type variable `T` in type `forall T. T -> None` with linear type `qubit`
